--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,5 +4,7 @@
 @import "about";
 @import "modules/user";
 @import "modules/flash";
+@import "modules/group";
 @import "_mypage.scss";
+@import "_messages.scss";
 @import "_inquiry.scss";
