--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -16,5 +16,10 @@
             = f.label :email
           .field-input
             = f.email_field :email
+        .field
+          .field-label
+            = f.label :あなたは税理士ですか？
+          .field-input
+            = f.select :acct, [['はい税理士です', true], ['いいえ税理士ではありません', false]]
         .actions
           = f.submit "Update", class: 'btn'
