--- a/app/views/functions/index.html.haml
+++ b/app/views/functions/index.html.haml
@@ -20,21 +20,21 @@
   %div.top-image__message
     %h1.top-image__message--main Visualize your Tax
     %p.top-image__message--sub SimTaxは、あたなの税金を視覚化します。
-- if user_signed_in?
-- else
-  %div.btn-wrapper
-    %div.btn-container
-      = link_to new_user_registration_path, class: "btn signup" do
-        新規登録
-      %a.btn.facebook{:href => "#"}
-        %span.fa.fa-facebook
-        Facebook IDで登録
-      %a.btn.twitter{:href => "#"}
-        %span.fa.fa-twitter
-        Twitter IDで登録
-      %a.btn.google{:href => "#"}
-        %span.fa.fa-google
-        Googleアカウントで登録
+-# - if user_signed_in?
+-# - else
+-#   %div.btn-wrapper
+-#     %div.btn-container
+-#       = link_to new_user_registration_path, class: "btn signup" do
+-#         新規登録
+-#       %a.btn.facebook{:href => "#"}
+-#         %span.fa.fa-facebook
+-#         Facebook IDで登録
+-#       %a.btn.twitter{:href => "#"}
+-#         %span.fa.fa-twitter
+-#         Twitter IDで登録
+-#       %a.btn.google{:href => "#"}
+-#         %span.fa.fa-google
+-#         Googleアカウントで登録
 
 
 %div.service-wrapper
@@ -47,19 +47,19 @@
         %p.txt-function 各項目を入力すると直ぐに納税額などを知ることができ、計算の過程をグラフ化します。収入、経費や所得控除等の増減に対する納税額への影響など感度分析を行えます。また、結果をメールやラインで送信することもできます。
         = link_to function_path(1), class: "txt-function__btn" do
           シミュレーションを行う
-      %div.function
-        %div.function-icon
-          %p 所得税情報
-        %p.txt-function 所得税の基礎知識から、税制優遇措置などの情報をタイムリーに更新します。あなたに適用される優遇措置などがあるかもしれません。
-        = link_to function_path(2), class: "txt-function__btn" do
-          所得税情報をみる
-      %div.function
-        %div.function-icon
-          %p 所得税管理
-        %p.txt-function あなたの所得税に関する情報を登録することによって時系列分析することができるようになります。また、チャットボットを使って知りたい情報をいつでも取得することができます。（会員登録が必要になります。）
-        - if user_signed_in?
-          = link_to function_path(3), class: "txt-function__btn" do
-            所得税管理を行う
+      -# %div.function
+      -#   %div.function-icon
+      -#     %p 所得税情報
+      -#   %p.txt-function 所得税の基礎知識から、税制優遇措置などの情報をタイムリーに更新します。あなたに適用される優遇措置などがあるかもしれません。
+      -#   = link_to function_path(2), class: "txt-function__btn" do
+      -#     所得税情報をみる
+      -# %div.function
+      -#   %div.function-icon
+      -#     %p 所得税管理
+      -#   %p.txt-function あなたの所得税に関する情報を登録することによって時系列分析することができるようになります。また、チャットボットを使って知りたい情報をいつでも取得することができます。（会員登録が必要になります。）
+      -#   - if user_signed_in?
+      -#     = link_to function_path(3), class: "txt-function__btn" do
+      -#       所得税管理を行う
       %div.function
         %div.function-icon
           %p 税理士相談
