--- a/app/assets/stylesheets/modules/user.scss
+++ b/app/assets/stylesheets/modules/user.scss
@@ -67,6 +67,13 @@
         width: 100%;
         padding: 10px;
         letter-spacing: 1px;
+        height: 50px;
+      }
+      select {
+        width: 100%;
+        padding: 10px;
+        letter-spacing: 1px;
+        height: 50px;
       }
     }
   }
