--- a/app/assets/stylesheets/_messages.scss
+++ b/app/assets/stylesheets/_messages.scss
@@ -13,45 +13,54 @@
 }
 
 .messages-index {
-  height: 600px;
+  // height: 600px;
   width: 100%;
-  background-image: image-url('paper-3213924__480.jpg');
+  // background-image: image-url('paper-3213924__480.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   padding-top: 80px;
   .message {
-    // margin: 0 300px 10px 300px;
     margin: 0 auto;
-    width: 700px;
+    width: 65%;
     opacity: 0.9;
     background-color: white;
     display: flex;
     justify-content: space-between;
-    border: 1px solid black;
+    border: 2px solid #dee7ec;
+    margin-bottom: 20px;
+    padding: 10px 0 10px 10px;
     .message-property {
       margin-left: 20px;
       
       &__whose {
-        font-size: 30px;
+        font-size: 15px;
+        margin-bottom: 10px;
       }
       &__when{
         font-size: 5px;
       }
     }
     .message-text{
+      word-break: break-all;
       width: 70%;
     }
   }
 }
+
 .form {
-  margin: 10px 250px 0 250px;
+  margin: 10px 250px 30px 250px;
+  height: 100px;
+  // border-top: 2px solid #dee7ec;
   &__message{
     width: 90%;
+    height: 60px;
+    padding: 20px;
   }
   &__submit {
     width: 9%;
     background-color: skyblue;
     border: 1px solid black;
+    height: 60px;
   }
 }
