--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -10,7 +10,7 @@
   .chat-group-form__field.clearfix
     .chat-group-form__field--left
       %label.chat-group-form__label{:for => "chat_group_チャットメンバー"} 対応可能税理士
-    .chat-group-form__field--right
+    .chat-group-form__field--right.chechboxacct
       / グループ作成機能の追加時はここにcollection_check_boxesの記述を入れてください
       = f.collection_check_boxes :user_ids, User.where("acct=1"), :id, :name
       / この部分はインクリメンタルサーチ（ユーザー追加の非同期化のときに使用します
