--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,7 +1,7 @@
 .message{data: {message: {id: message.id}}}
   .message-property
     .message-property__whose
-      = message.user.name
+      = "#{message.user.name}さんからのメッセージ"
     .message-property__when
       = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
   .message-text
